# AutoNomic

./: .gitignore  .gitmodules  CMakeLists.txt  ChurchNat.agda  Makefile  Makefile2  README.md  arith_def.agda  autonomic.cpp  bad_out  church.agda  cppmain.cpp  cppout.cpp  e.sh  euler_js_comments.js  id4.agda  init.el  json_object.h  jsonld_an.cpp  marpa_an.cpp  marpa_an.h  misc.cpp  misc.h  nquads.cpp  polymorphism.agda  prover.cpp  rdf.cpp  run.sh  simple-auth.hs  simpler-easier.hs  unicode.agda  unifiers.cpp  univar.cpp  where_is_tau  y2.cpp
Agda/: ChurchNat.agda  basics.agda  id2.agda  id3.agda  id4.agda  poly.agda  poly2.agda  polymorphism.agda  unicode.agda
eulerjs/: builtins.js  euler.html  euler_js_ep_fixed_1.js  euler_js_false_fixed.js  json.js
eulerjs/examples/: failed_test.js  reflexivity.js  symmetry.js  test.js  transitivity.js
eulerjs/versions/: euler_js_ep_fixed_2.js  euler_js_orig.js
notes/: SKI  a.out  lambda_prolog  test.agda
notes/algebra_general/: ADTs  ALG_notes  AOP_notes  zippers_as_derivatives
notes/basic_algos/: arithmetic_algos
notes/category_theory/: substitution_notes  topology_notes
notes/combinatory_logic/: CL_BCKW_to_BRKD  CL_SKI_to_BCKW  CL_collect_args  CL_combinatory_completeness  CL_common_combinators  CL_defer  CL_history  CL_repeat  CL_syntax_tree  CL_to_LC_notes  CL_well_formedness_check_algo.cpp  LC_to_CL  SKI.cpp  SKI_hex  SKI_objdump  SKI_readelf  combinatory_algebra
notes/complexity/: complexity2
notes/crypto/discrete_log/: discrete_log_notes
notes/crypto/elliptic_curves/: Dual_EC_DRBG  elliptic_curves_general
notes/crypto/integer_factorization/: chinese_remainder_theorem  dirichlet_series  notes  numbers_as_vectors  prime_counting_function  prime_decomposition_theorem  prime_distribution_notes
notes/crypto/trustless_exchange/: mfa2_notes  mfa3_notes  mfa_notes
notes/curry_howard/: CH_extended  CH_implication.html  CH_table  CH_universal_quantification.html
notes/daemoz/: commutativity.agda  dep_types.agda  dep_types_v2.agda  logical_connectives.agda
notes/dev/: DESIGN_notes
notes/dev_general/: disassembly_cheat_sheet  disassembly_tools
notes/fin/: btc  fin_CPI  fin_ICE  fin_USD  fin_diffyQ  fin_risk_neutral
notes/funext/: Fin12.agda  Fin12.agda-tail40  Fin12.agdai  Fin12.agda~  Hoffman_Streicher_groupoid_model  Iso.agda  Iso.agda-tail200  Iso.agdai  Iso.agda~  cubical.agda  homotopy_equialence  transport_axioms:
notes/koo/: what_we_got_so_far
notes/koo/deploy/: vps-script
notes/lambda_calc/: F2_notes  LC_church_data  LC_church_rosser  LC_equational_axioms  LC_fixed_point_theorem  LC_models  LC_standardization_theorem  LC_substitution_lemma  extensionality_rescue
notes/logic_general/: FOL_halting_problem_implies_undecidability  LOG_TF  LOG_conjunction  Q_axioms  classical_logic_game_theory  halting_problem  injectivity_of_type_constructors  kripke  nonconstructive  paradox
notes/logic_general/dbl_negation/: double-negation.agda  double-negation.agda-tail200  double-negation.agdai  double-negation.agda~  double_negation  double_negation_2  double_negation_dishonesty  double_negation_glivenko
notes/mediawiki/: PG_backup  mw_notes
notes/model_theory/: MT_general
notes/natural_deduction/: ND_W_types  ND_auth  ND_binding_trees  ND_conjunction  ND_conjunction_transform  ND_conjunction_v6  ND_conjunction_v8  ND_conjunction_v9  ND_cut_rule  ND_disjunction  ND_disjunction_explained  ND_exists  ND_false  ND_forall  ND_hypothesis_rule  ND_identity  ND_implication  ND_nat  ND_rules_prologish_notation  ND_rules_simple  ND_rules_simple_harmony  ND_rules_v1  ND_true  SC_notes  augor-on-eta-and-extensionality  disjunction_explained  logical_harmony  type_soundness  unifiers_as_equivalences  upside_down_modus_ponens
notes/polymorphism/: MT_polymorphic_lambdas
notes/subst/: Abstract.agda  conjunction-eta.agda  lc-essentials.lagda.md  lc.lagda.md  proofs.agda  proofs_test.lagda  subst.lagda.md  test-lc-essentials.lagda.md
tests/cli/: count
tests/divergence_test/: divergence_test.n3
tests/examples/: dhtdbgoff  dhtdbgon
tools/: get_includes.sh
